sfdx-source/force-app/main/default/objects/Interface__c/Interface__c.object-meta.xml
<CustomObject>
    <description>LEM-92: This Object is created for Integration/Batch retry mechanism</description>
    <label>Interface</label>
    <nameField>
        <label>Interface Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interfaces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>