sfdx-source/force-app/main/default/objects/Interface__c/fields/Class_Interface_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Interface_Name__c</fullName>
    <description>LEM-92: This field is to store the interface name of the Batch/Callout classes</description>
    <label>Class Interface Name</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>