sfdx-source/force-app/main/default/objects/Interface__c/fields/Enable_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-92: This field is to check whether logging is enabled or not</description>
    <label>Enable Logging</label>
    <type>Checkbox</type>
</CustomField>