sfdx-source/force-app/main/default/objects/Interface__c/fields/Enable_Retry__c.field-meta.xml
<CustomField>
    <fullName>Enable_Retry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-92: This field is to specify whether failure classes needs to re-execute or not</description>
    <label>Enable Retry</label>
    <type>Checkbox</type>
</CustomField>