sfdx-source/force-app/main/default/objects/Interface__c/fields/Retry_Limit__c.field-meta.xml
<CustomField>
    <fullName>Retry_Limit__c</fullName>
    <description>LEM-92: This field is for storing the retry limit for the classes</description>
    <label>Retry Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>