sfdx-source/force-app/main/default/objects/Interface__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Class_Interface_Name__c</columns>
    <columns>Enable_Logging__c</columns>
    <columns>Enable_Retry__c</columns>
    <columns>Retry_Limit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>